--- a/index.html
+++ b/index.html
@@ -1,11 +1,16 @@
 <!doctype html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="192x192" href="/icons/logo192.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/logo192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/icons/logo512.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite + React</title>
+  <link rel="manifest" href="/manifest.json" />
+  <title>Mieszkaniownik</title>
 </head>
 
 <body>
