feat: add login form and user context

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link href="/src/index.css" rel="stylesheet">
+
   <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
   <link rel="apple-touch-icon" sizes="192x192" href="/icons/logo192.png" />
   <link rel="icon" type="image/png" sizes="192x192" href="/icons/logo192.png" />
@@ -13,8 +15,8 @@
   <title>Mieszkaniownik</title>
 </head>
 
-<body>
-  <div id="root"></div>
+<body class="flex flex-col bg-white text-black w-full min-h-screen items-center m-0">
+  <div id="root" class="min-h-screen w-full"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
