--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <title>Mieszkaniownik</title>
 </head>
 
-<body class="flex flex-col bg-white text-black w-full min-h-screen items-center m-0">
-  <div id="root" class="min-h-screen w-full"></div>
+<body class=" bg-white text-black w-full min-h-screen  m-0">
+  <div id="root" class="flex flex-col min-h-screen w-full items-center"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
 
