--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <link href="/src/index.css" rel="stylesheet">
 
   <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="192x192" href="/icons/logo192.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/icons/logo192.png" />
-  <link rel="icon" type="image/png" sizes="512x512" href="/icons/logo512.png" />
+  <link rel="apple-touch-icon" sizes="192x192" href="/icons/logo192.jpg" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/icons/logo192.jpg" />
+  <link rel="icon" type="image/png" sizes="512x512" href="/icons/logo512.jpg" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="manifest" href="/manifest.json" />
