--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link href="/src/index.css" rel="stylesheet" />
 
+    <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="/icons/favicon.ico" />
     <link rel="apple-touch-icon" sizes="192x192" href="/icons/logo192.jpg" />
     <link
@@ -19,9 +20,31 @@
       href="/icons/logo512.jpg"
     />
 
+    <!-- Primary Meta Tags -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="Mieszkaniownik - Znajdź idealne mieszkanie" />
+    <meta name="description" content="Mieszkaniownik to inteligentny asystent do wyszukiwania mieszkań. Przeglądaj oferty, analizuj rynek, otrzymuj alerty o nowych mieszkaniach i znajdź wymarzone miejsce do życia." />
+    <meta name="keywords" content="mieszkania, wynajem, kupno, nieruchomości, wyszukiwarka mieszkań" />
+    
+    <!-- Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mieszkaniownik.wsparcie.dev/" />
+    <meta property="og:title" content="Mieszkaniownik - Znajdź idealne mieszkanie" />
+    <meta property="og:description" content="Mieszkaniownik to inteligentny asystent do wyszukiwania mieszkań. Przeglądaj oferty, analizuj rynek, otrzymuj alerty o nowych mieszkaniach i znajdź wymarzone miejsce do życia." />
+    <meta property="og:image" content="https://mieszkaniownik.wsparcie.dev/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:locale" content="pl_PL" />
+    
+    <!-- X -->
+    <meta property="X:card" content="summary_large_image" />
+    <meta property="X:url" content="https://mieszkaniownik.wsparcie.dev/" />
+    <meta property="X:title" content="Mieszkaniownik - Znajdź idealne mieszkanie" />
+    <meta property="X:description" content="Mieszkaniownik to inteligentny asystent do wyszukiwania mieszkań. Przeglądaj oferty, analizuj rynek, otrzymuj alerty o nowych mieszkaniach i znajdź wymarzone miejsce do życia." />
+    <meta property="X:image" content="https://mieszkaniownik.wsparcie.dev/logo.png" />
+
     <link rel="manifest" href="/manifest.json" />
-    <title>Mieszkaniownik</title>
+    <title>Mieszkaniownik - Znajdź idealne mieszkanie</title>
   </head>
 
   <body class="m-0 min-h-screen w-full bg-white text-black">
